# gressgraph

./: .gitignore  LICENSE  Makefile  README  README.markdown  TODO  default.nix  design  dev.nix  example.dot  flake.nix  gressgraph.cabal  gressgraph.lhs  ingressgraph.lhs  parse.lhs  test-firewall-output  test-iptables-output
